switch back to Java 8 (in build only), and start implementing feedback. code does not yet compile.